--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en" data-theme="light">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/src//assets/f.png" />
+    <link rel="icon" href="" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>NexUsFood</title>
+    <title>MealPlaterz</title>
   </head>
   <body>
     <div id="root"></div>
