--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" data-theme="light">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="" />
+    <link rel="icon" type="image/svg+xml" href="/meal.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MealPlaterz</title>
   </head>
