banner updated with opacity, relative, title added

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="icon" type="image/svg+xml" href="/src/assets/meal.jpg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-  <title>MealPlaterz</title>
+  <title>Share Food Build Community</title>
 </head>
 
 <body>
